regression/fail/modules.30.sml
structure S:> sig type t end = struct type t = unit end
val _ = (): S.t
